# yt-agent-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.example.yaml
scripts/: run_all.py  run_flask_app.py  update_resolve.py
src/yt_agent_assistant/: __init__.py  cli.py  config.py  utils.py  web_app.py
src/yt_agent_assistant/services/: audio.py  images.py  resolve.py  titles.py
tests/: test_audio.py  test_config.py
